--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ gradio == 4.36.1
 pyvis == 0.3.2
 evaluate == 0.4.2
 python-dotenv == 1.0.1
-pip install git+https://github.com/huggingface/peft.git
+git+https://github.com/huggingface/peft.git
 trl == 0.9.6
 bitsandbytes == 0.43.3
